Sorgente/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Acconto_agevolazione_SG__c</fullName>
        <label>Acconto agevolazione SG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analisi_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analisi 1</label>
        <referenceTo>Analisi__c</referenceTo>
        <relationshipLabel>Prodotti</relationshipLabel>
        <relationshipName>Prodotti</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analisi_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analisi 2</label>
        <referenceTo>Analisi__c</referenceTo>
        <relationshipLabel>Prodotti (Analisi 2)</relationshipLabel>
        <relationshipName>Prodotti1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_unit__c</fullName>
        <label>Business unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Costo_Gestione_pratica__c</fullName>
        <label>Costo Gestione pratica</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costo_d_acquisto__c</fullName>
        <label>Costo d&apos;acquisto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IVA__c</fullName>
        <label>IVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IVA_applicabile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IVA applicabile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Importanza__c</fullName>
        <label>Importanza</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Bassa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inizio_vendita__c</fullName>
        <label>Inizio vendita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kit_raccolta__c</fullName>
        <label>Kit raccolta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provetta EDTA</fullName>
                </value>
                <value>
                    <fullName>Plasma citrato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kit_raccolta_fornito_da_Sorgente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kit raccolta fornito da Sorgente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laboratorio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Sottocategoria__c</field>
                <operation>equals</operation>
                <value>Lab nazionali, Lab UE, Lab extra UE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prodotti</relationshipLabel>
        <relationshipName>Prodotti</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <label>Markup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Numero_rate_SDD__c</fullName>
        <label>Numero rate SDD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Periodo_di_riferimento__c</fullName>
        <label>Periodo di riferimento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prenatale</fullName>
                </value>
                <value>
                    <fullName>Preconcepimento</fullName>
                </value>
                <value>
                    <fullName>Postnatale</fullName>
                </value>
                <value>
                    <fullName>Generico ginecologico</fullName>
                </value>
                <value>
                    <fullName>MTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rischio_biologico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rischio biologico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specializzazioni__c</fullName>
        <label>Specializzazione</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chirurgia estetica</fullName>
                </value>
                <value>
                    <fullName>Dermatologia</fullName>
                </value>
                <value>
                    <fullName>Diabetologia</fullName>
                </value>
                <value>
                    <fullName>Dietologia</fullName>
                </value>
                <value>
                    <fullName>Gastroenterologia</fullName>
                </value>
                <value>
                    <fullName>Ginecologia</fullName>
                </value>
                <value>
                    <fullName>Medicina alternativa</fullName>
                </value>
                <value>
                    <fullName>Oncologia</fullName>
                </value>
                <value>
                    <fullName>Medicina sportiva</fullName>
                </value>
                <value>
                    <fullName>Neurologia</fullName>
                </value>
                <value>
                    <fullName>Odontoiatria</fullName>
                </value>
                <value>
                    <fullName>Oculistica</fullName>
                </value>
                <value>
                    <fullName>Pediatria</fullName>
                </value>
                <value>
                    <fullName>Senologia</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT__c</fullName>
        <label>TAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temperatura_di_trasporto__c</fullName>
        <label>Temperatura di trasporto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-20</fullName>
                </value>
                <value>
                    <fullName>4-8</fullName>
                </value>
                <value>
                    <fullName>Ambiente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tempo_di_trasporto_massimo__c</fullName>
        <label>Tempo di trasporto massimo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>&gt;48</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_campione_del_prelievo__c</fullName>
        <label>Tipo campione del prelievo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sangue+EDTA</fullName>
                </value>
                <value>
                    <fullName>Sangue+eparina</fullName>
                </value>
                <value>
                    <fullName>Salivare</fullName>
                </value>
                <value>
                    <fullName>Urine</fullName>
                </value>
                <value>
                    <fullName>Siero</fullName>
                </value>
                <value>
                    <fullName>Liquido seminale</fullName>
                </value>
                <value>
                    <fullName>Istologico</fullName>
                </value>
                <value>
                    <fullName>Citologico</fullName>
                </value>
                <value>
                    <fullName>Tampone uretrale</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
                <value>
                    <fullName>Secreto vaginale</fullName>
                </value>
                <value>
                    <fullName>Tampone faringeo</fullName>
                </value>
                <value>
                    <fullName>Tampone vaginale</fullName>
                </value>
                <value>
                    <fullName>Tampone vagino-uretrale</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_campione_dell_analisi__c</fullName>
        <label>Tipo campione dell&apos;analisi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sangue+EDTA</fullName>
                </value>
                <value>
                    <fullName>Sangue+eparina</fullName>
                </value>
                <value>
                    <fullName>Salivare</fullName>
                </value>
                <value>
                    <fullName>Urine</fullName>
                </value>
                <value>
                    <fullName>Siero</fullName>
                </value>
                <value>
                    <fullName>Liquido seminale</fullName>
                </value>
                <value>
                    <fullName>Istologico</fullName>
                </value>
                <value>
                    <fullName>Citologico</fullName>
                </value>
                <value>
                    <fullName>Tampone uretrale</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
                <value>
                    <fullName>Secreto vaginale</fullName>
                </value>
                <value>
                    <fullName>Tampone faringeo</fullName>
                </value>
                <value>
                    <fullName>Tampone vaginale</fullName>
                </value>
                <value>
                    <fullName>Tampone vagino-uretrale</fullName>
                </value>
                <value>
                    <fullName>Altro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_test__c</fullName>
        <label>Tipo test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medico</fullName>
                </value>
                <value>
                    <fullName>Paramedico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>Prodotto</fullName>
        <active>true</active>
        <label>Prodotto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Servizi</fullName>
        <active>true</active>
        <label>Servizi</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>